Fix for a CSS3 column layout bug.

--- a/css/about.styl
+++ b/css/about.styl
@@ -18,10 +18,13 @@
   .questions
     background: $lightgrey
   
-    div
+    > div
       -moz-column-count: 2
       -webkit-column-count: 2
       column-count: 2
+      
+      div
+        display: inline-block
   
   .project
     background: $lightgrey
